added all questions

--- a/week2/tutorial1.ipynb
+++ b/week2/tutorial1.ipynb
@@ -768,73 +768,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 1:</b> What information do the functions .shape() and .describe() give you about the data? \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's find out the data types of the data and if there are non-null counts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 323958 entries, 0 to 323957\n",
-      "Data columns (total 45 columns):\n",
-      " #   Column      Non-Null Count   Dtype  \n",
-      "---  ------      --------------   -----  \n",
-      " 0   Unnamed: 0  323958 non-null  int64  \n",
-      " 1   YEAR        323958 non-null  int64  \n",
-      " 2   SAMPLE      323958 non-null  int64  \n",
-      " 3   SERIAL      323958 non-null  int64  \n",
-      " 4   HHWT        323958 non-null  float64\n",
-      " 5   REGION      323958 non-null  int64  \n",
-      " 6   STATEFIP    323958 non-null  int64  \n",
-      " 7   COUNTYFIP   323958 non-null  int64  \n",
-      " 8   DENSITY     323958 non-null  float64\n",
-      " 9   METRO       323958 non-null  int64  \n",
-      " 10  FARM        323958 non-null  int64  \n",
-      " 11  OWNERSHP    308813 non-null  float64\n",
-      " 12  OWNERSHPD   308813 non-null  float64\n",
-      " 13  MORTGAGE    226643 non-null  float64\n",
-      " 14  MORTGAG2    147006 non-null  float64\n",
-      " 15  PROPINSR    226643 non-null  float64\n",
-      " 16  RENT        77317 non-null   float64\n",
-      " 17  COSTELEC    308813 non-null  float64\n",
-      " 18  COSTGAS     308813 non-null  float64\n",
-      " 19  COSTFUEL    308813 non-null  float64\n",
-      " 20  HHINCOME    308813 non-null  float64\n",
-      " 21  ROOMS       308813 non-null  float64\n",
-      " 22  BUILTYR2    308813 non-null  float64\n",
-      " 23  UNITSSTR    308813 non-null  float64\n",
-      " 24  BEDROOMS    308813 non-null  float64\n",
-      " 25  FUELHEAT    308813 non-null  float64\n",
-      " 26  VEHICLES    308813 non-null  float64\n",
-      " 27  PERWT       323958 non-null  float64\n",
-      " 28  RELATE      323958 non-null  int64  \n",
-      " 29  RELATED     323958 non-null  int64  \n",
-      " 30  SEX         323958 non-null  int64  \n",
-      " 31  AGE         323958 non-null  int64  \n",
-      " 32  MARST       323958 non-null  int64  \n",
-      " 33  RACE        323958 non-null  int64  \n",
-      " 34  RACED       323958 non-null  int64  \n",
-      " 35  EDUC        323958 non-null  int64  \n",
-      " 36  EDUCD       323958 non-null  int64  \n",
-      " 37  DEGFIELD    83072 non-null   float64\n",
-      " 38  EMPSTAT     267842 non-null  float64\n",
-      " 39  EMPSTATD    323958 non-null  int64  \n",
-      " 40  LABFORCE    323958 non-null  int64  \n",
-      " 41  OCC         192319 non-null  float64\n",
-      " 42  IND         192319 non-null  float64\n",
-      " 43  INCTOT      271782 non-null  float64\n",
-      " 44  POVERTY     311123 non-null  float64\n",
-      "dtypes: float64(25), int64(20)\n",
-      "memory usage: 111.2 MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.info()"
    ]
@@ -909,6 +859,24 @@
    ],
    "source": [
     "data.isnull().sum().sort_values(ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 2:</b> <br>\n",
+    "    \n",
+    "Please describe what the following line of Python code does:\n",
+    "<br>\n",
+    "    <b>data.isnull().sum().sort_values(ascending = False)</b>\n",
+    "<br>\n",
+    "Hint: Every dot (.) indicates a new function.\n",
+    "<br>\n",
+    "Also describe what you see in the data. What does the output mean? Do you notice any surprises?\n",
+    "   \n",
+    "</div>"
    ]
   },
   {
@@ -1099,6 +1067,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 3:</b> We just showed how to explore the OWNERSHP and HHINCOME variables. Choose a different variable and describe it. What are the units, and does it make sense to use value_counts() to understand this variable or would you rather use something different?\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now we are going to take a look at energy costs. The total costs of energy are given by electricity costs, gas costs and fuel costs. Before summing the three variables to obtain the total energy costs, we take a look at the three individual variables. "
    ]
   },
@@ -1137,16 +1114,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There appears to be a strange value around 10000. Find out about this value with a line of code. You can find on the IPUMS USA [website](https://usa.ipums.org/usa/) what the value indicates."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Answer. "
+    "There appears to be a strange value around 10000. You can find on the IPUMS USA [website](https://usa.ipums.org/usa/) what the value indicates.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 4:</b> Describe what is happening around 10,000. Did you write some code you to better understand what is going on? If so, please provide the code.\n",
+    "</div>"
    ]
   },
   {
@@ -1248,12 +1220,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Answer"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <b>Question 5:</b> Which variable is most correlated to <b>COSTENERGY</b> and which variable the least?  \n",
+    "</div>"
    ]
   },
   {
@@ -1348,6 +1320,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <b>Question 6:</b> Please explain what the .merge() function does. Also explain the option 'on' and 'how'. \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Next we will use the variable SEX to create a new variable. It is possible that women use more energy than men, or the other way around, so the number of women (or men) could be a useful variable for predicting energy costs. To obtain the household size, we simply counted the number of occurances of each serial number, but to obtain the number of women per household, we also need the column SEX. The variable SEX has two values, 1 represents a male and 2 represents a female. "
    ]
   },
@@ -1431,6 +1412,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <b>Question 7:</b> There are different ways to obtain the same result. Please describe the two lines of code below and explain how they take a different approach, but yet achieve the same outcome.\n",
+    "    \n",
+    "<br>\n",
+    "\n",
+    "<i>data[['SERIAL', 'SEX']].value_counts(dropna = False).reset_index() <br>\n",
+    "data[['SERIAL','SEX']].groupby(['SERIAL','SEX']).size().reset_index()</i>\n",
+    "<br>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In the next steps you are going to write code that merges a new variable called **'NR_OF_WOMEN'** (number of women) to the existing dataframe. The following hints guide you through the steps. \n",
     "\n",
     "*Three lines of code is sufficient. Hint 1 is given for the first line of code, Hint 2 for the second line, and Hint 3a, 3b, 3c for the third line of code.*\n",
@@ -1469,6 +1465,15 @@
    "outputs": [],
    "source": [
     "data['NR_OF_WOMEN'] = data['NR_OF_WOMEN'].fillna(0) # data['NR_OF_WOMEN'] = data['NR_OF_WOMEN'].replace(np.nan, ...) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <b>Question 8:</b> Please provide the three lines of code you have written to succesfully create and merge the new variable <b>NR_OF_WOMEN</b>. Also describe how you solved/filled the NaN values.\n",
+    "</div>"
    ]
   },
   {
@@ -1529,6 +1534,15 @@
     "youngest = data[['SERIAL', 'AGE']].groupby('SERIAL').min().reset_index()\n",
     "youngest = youngest.rename(columns = {'AGE':'YOUNGEST'})\n",
     "data = data.merge(youngest, on = 'SERIAL', how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <b>Question 9:</b> Please provide the three lines of code you have written to succesfully create and merge the new variable <b>YOUNGEST</b>. \n",
+    "</div>"
    ]
   },
   {
@@ -1655,6 +1669,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <b>Question 10:</b> Interpret the barplot with the age of the youngest household member. And can you think of other variables you want to create? \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 6. Regression analysis\n",
     "<hr>"
    ]
@@ -1766,6 +1789,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <b>Question 11:</b> Interpret the results of the OLS regression. You can discuss the following questions in your answer. 1) Do you think that the coefficient estimates are plausible? You don't need to explain all coefficient estimates, but highlight a few. 2) Would you include other variables in the regression? Or do you want to exclude variables? Explain which ones. Make another correlation heatmap to support your explanation. \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Interpret the results of the OLS regression. Make another correlation heatmap to support your explanation. "
    ]
   },
@@ -1777,6 +1809,22 @@
    "source": [
     "# code for correlation heatmap. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <b>Question 12:</b> Upload the correlation matrix you have created to answer the previous question.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
