--- a/week2/tutorial2.ipynb
+++ b/week2/tutorial2.ipynb
@@ -374,6 +374,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 1:</b> Why do we only want to have one person per household in our random forest model?\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Dealing with missing values\n",
     "<hr>\n"
    ]
@@ -449,6 +458,15 @@
    ],
    "source": [
     "rf = RandomForestRegressor(n_estimators = 50, max_features = 'sqrt', max_depth = 5, random_state = 18).fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 2:</b> Explain in your own words the options in the RandomForestRegressor and how these options will affect the results. Also explain two other options in RandomForestRegressor that are not included in the line of code we have used to run the model.\n",
+    "</div>"
    ]
   },
   {
@@ -644,6 +662,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 3:</b> Explain what you would do with the remaining missing values in our data? There is not necessarily a right or wrong answer, but ofcourse your choices matter for the results. </div>\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -753,6 +780,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 4:</b> Upload your decision tree. </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 5:</b> Interpret what you see in the decision tree. Hint: Explain the terms squared_error, samples and value in the tree.  </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5. Prediction with the random forest model\n",
     "<hr>"
    ]
@@ -828,6 +871,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 6:</b> Interpret the plot you have created to evaluate the performance of your model. </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Next we check performance in terms of a numeric criterion. We can for example check the mean squared error or the R2. "
    ]
   },
@@ -871,6 +922,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 7:</b> What are the values you receive for the <i>mean squared error</i> and the <i>r-squared</i>? Also explain the two terms. </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 7. Parameter tuning\n",
     "<hr>"
    ]
@@ -879,25 +938,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The R2 score is pretty low, so we want to try other hyperparameters. We will change the depth and the number of trees in the forest. In the code below, we run a for loop that tries 3 different n_estimators and 3 different depths, so we estimate 9 different random forest models. We save the mse and r2 of each model in a list, i.e. list_mse and list_r2. \n",
-    "\n",
-    "Interpret the results. Which model performs best. Think about how the for loop works. You could use print(n_est) and print(dep) in the for loop to make life easier. "
+    "The R2 score is pretty low, so we want to try other hyperparameters. We will change the depth and the number of trees in the forest. In the code below, we run a for loop that tries 3 different n_estimators and 3 different depths, so we estimate 9 different random forest models. We save the mse and r2 of each model in a list, i.e. list_mse and list_r2. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2306369.604970091, 2251849.1411220697, 2215207.4379811557, 2311113.0344546493, 2258470.2591721355, 2217150.9686766216, 2308364.8554299786, 2258233.3271820215, 2218638.678794538]\n",
-      "[0.1935850759104092, 0.21264798569754262, 0.2254596426814096, 0.19192655061616692, 0.2103329324648665, 0.22478009324801762, 0.19288744282303139, 0.21041577499470665, 0.224259920054952]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_mse = []\n",
     "list_r2 = []\n",
@@ -919,9 +967,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also try another parameter space? Also think about the time the model needs to run. \n",
-    "The higher the number of trees and the depth, the longer it takes to train the model.\n",
-    "If yes, you can copy the code from the previous cell and change the numbers over which the for loop iterates, i.e. the numbers in [20,50,100] and [4,5,6].  "
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 8:</b> Interpret the results. Which model performs best. Think about how the for loop works. You could use print(n_est) and print(dep) in the for loop to make life easier. </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 9:</b> Try another parameter space. Also think about the time the model needs to run. The higher the number of trees and the depth, the longer it takes to train the model. You can copy the code from the previous cell and change the numbers over which the for loop iterates, i.e. the numbers in [20,50,100] and [4,5,6].  </div>"
    ]
   },
   {
@@ -968,6 +1023,22 @@
     "plt.figure(figsize=(7, 10.5))\n",
     "plt.barh(x_train.columns[sorted_idx], rf.feature_importances_[sorted_idx])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 10:</b> Upload the figure of the feature importance. </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 11:</b> According to the plot, which variables, also called features, are most important in the random forest? Should we leave out variables from the model. Hint: Not all variables in the model are meaningful, are they?  </div>"
    ]
   },
   {
