--- a/week5/tutorial2.ipynb
+++ b/week5/tutorial2.ipynb
@@ -128,24 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2420e97a",
    "metadata": {
     "id": "2420e97a"
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'regionmask'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgpd\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mregionmask\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstats\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m percentileofscore\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstatistics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NormalDist\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'regionmask'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import working modules\n",
     "import xarray as xr\n",
@@ -320,7 +308,9 @@
     "\n",
     "Let's have a look at the administrative boundaries we just loaded using `pd.DataFrame.plot()`\n",
     "\n",
-    "***Question 1: In the code block below, we are plotting the Administrative boundaries, the `plot()` function in `pd.DataFrame.plot()` can take many parameters. Include the the linewidth, figure size, the y and x labels, color (indicate none), edgecolor. Don't forget to add the figure title. What does each of these parameters do?***"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 1:</b> In the code block below, we are plotting the Administrative boundaries, the `plot()` function in `pd.DataFrame.plot()` can take many parameters. Include the the linewidth, figure size, the y and x labels, color (indicate none), edgecolor. Don't forget to add the figure title. \n",
+    "</div>"
    ]
   },
   {
@@ -1488,7 +1478,9 @@
    "source": [
     "The computation takes a couple of minutes but then the mask can be saved (for example as a NetCDF) for a later use. Let's plot the mask we just created. You can see that the bounding box we used zooms into the European area.\n",
     "\n",
-    "**Action** Please submit the mask figure outlining the zoomed area of the western European countries and fill in the plot parameters in the code box below."
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 2:</b> Please submit the mask figure outlining the zoomed area of the western European countries and fill in the plot parameters in the code box below.\n",
+    "</div>"
    ]
   },
   {
@@ -1608,7 +1600,9 @@
     "id": "d26fc383"
    },
    "source": [
-    "***Question 2: Which country did you select as a case study region and why? Make sure to include the spatial and time series plots of the selected case study region***"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 3:</b> Which country did you select as a case study region and why?\n",
+    "</div>"
    ]
   },
   {
@@ -1641,7 +1635,9 @@
     "id": "a0e14c47"
    },
    "source": [
-    "***Question 3 : Describe what the fuction `np.where()`does? Are there other fuctions that can replace it?***"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 4:</b> Describe what the fuction `np.where()`does? Are there other fuctions that can replace it?\n",
+    "</div>"
    ]
   },
   {
@@ -1697,6 +1693,16 @@
     "ax = plt.axes()\n",
     "monthly_prec.precipitation.isel(time = 1).plot(ax = ax)\n",
     "data_Adminunits.plot(ax = ax, alpha = 0.8, facecolor = 'none')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9d369bd-e52a-4324-9779-7f4e1d1b354a",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 5:</b> Upload the spatial figure of your country. \n",
+    "</div>"
    ]
   },
   {
@@ -1764,7 +1770,9 @@
     "id": "3e50cce0"
    },
    "source": [
-    "***Question 4 : Briefly explain what you see in both the precipitation timeseries plot  and the precipitation spatial plot above.***"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 6:</b> Briefly explain what you see in both the precipitation timeseries plot  and the precipitation spatial plot above.\n",
+    "</div>"
    ]
   },
   {
@@ -1907,7 +1915,9 @@
     "id": "7320bbf5"
    },
    "source": [
-    "***Question 5 : What other fuctions in can be used instead of the `scipy.stats` `percentilescore()`?Describe these other fuctions***"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 7:</b> What other fuctions in can be used instead of the `scipy.stats` `percentilescore()`?Describe these other fuctions.\n",
+    "</div>"
    ]
   },
   {
@@ -2013,7 +2023,9 @@
     "id": "b4c6eac1"
    },
    "source": [
-    "***Question 6: What does the xarray `merge()` and python list `append()` methods do and return? Describe***"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 8:</b> What does the xarray `merge()` and python list `append()` methods do and return? Describe.\n",
+    "</div>"
    ]
   },
   {
@@ -2593,7 +2605,9 @@
     "id": "4947a653"
    },
    "source": [
-    "***Question 7:  Select a year with extreme drought occurence within the selected study region and plot the spi values. Include the plots in Canvas***"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 9:</b> Select a year with extreme drought occurence within the selected study region and plot the spi values. Include the plots in Canvas.\n",
+    "</div>"
    ]
   },
   {
@@ -2620,7 +2634,9 @@
     "id": "f4c5d4d1"
    },
    "source": [
-    "***Question 7: Explain the drought spatial plots plotted above. How was the drought in each of the months within the regions of the selected country?***"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 10:</b> Explain the drought spatial plots plotted above. How was the drought in each of the months within the regions of the selected country?\n",
+    "</div>"
    ]
   },
   {
@@ -2675,7 +2691,9 @@
     "id": "6d088853"
    },
    "source": [
-    "***Question 8: Explain the drought pattern in the spi values timeseries above for the selected case study region***"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 11:</b> Explain the drought pattern in the spi values timeseries above for the selected case study region.\n",
+    "</div>"
    ]
   },
   {
@@ -2685,7 +2703,9 @@
     "id": "5f727623"
    },
    "source": [
-    "***Question 9: Now that we have calculated SPI-1 above, change the accumulation number from 1 and calculate SPI-6 and SPI-12. What differences do you see in the drought characteristics and what does each represent. Include the plots in canvas***"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Question 12:</b> Now that we have calculated SPI-1 above, change the accumulation number from 1 and calculate SPI-6 and SPI-12. What differences do you see in the drought characteristics and what does each represent.\n",
+    "</div>"
    ]
   }
  ],
