--- a/_sources/week1/tutorial2.ipynb
+++ b/_sources/week1/tutorial2.ipynb
@@ -51,16 +51,16 @@
     "<h2>Tutorial Outline<span class=\"tocSkip\"></span></h2>\n",
     "<hr>\n",
     "<div class=\"toc\"><ul class=\"toc-item\">\n",
-    "<li><span><a href=\"#1.-Introduction-to-Python-Packages\" data-toc-modified-id=\"1.-Introduction-to-Python-Packages-1\"> Introduction to Python Packages</a></span></li>\n",
-    "<li><span><a href=\"#2.-Introduction-to-NumPy\" data-toc-modified-id=\"2.-Introduction-to-NumPy-2\"> Introduction to NumPy</a></span></li>\n",
-    "<li><span><a href=\"#3.-NumPy-Arrays\" data-toc-modified-id=\"3.-NumPy-Arrays-23\"> NumPy Arrays</a></span></li>\n",
-    "<li><span><a href=\"#4.-Array-Operations-and-Broadcasting\" data-toc-modified-id=\"4.-Array-Operations-and-Broadcasting-4\"> Array Operations and Broadcasting</a></span></li>\n",
-    "<li><span><a href=\"#5.-Indexing-and-slicing\" data-toc-modified-id=\"5.-Indexing-and-slicing-5\"> Indexing and slicing</a></span></li>\n",
-    "<li><span><a href=\"#6.-More-Useful-NumPy-Functions\" data-toc-modified-id=\"6.-More-Useful-NumPy-Functions-6\"> More Useful NumPy Functions</a></span></li>\n",
-    "<li><span><a href=\"#7.-Introduction-to-Pandas\" data-toc-modified-id=\"7.-Introduction-to-Pandas-7\"> Introduction to Pandas</a></span></li>\n",
-    "<li><span><a href=\"#8.-Pandas-Series\" data-toc-modified-id=\"8.-Pandas-Series-8\"> Pandas Series</a></span></li>\n",
-    "<li><span><a href=\"#9.-Pandas-DataFrames\" data-toc-modified-id=\"9.-Pandas-DataFrames-9\"> Pandas DataFrames</a></span></li>\n",
-    "<li><span><a href=\"#10.-Why-ndarrays-and-Series-and-DataFrames?\" data-toc-modified-id=\"10.-Why-ndarrays-and-Series-and-DataFrames?-10\"> Why ndarrays and Series and DataFrames?</a></span></li></ul></div>"
+    "<li><span><a href=\"#introduction-to-python-packages\" data-toc-modified-id=\"1.-Introduction-to-Python-Packages-1\"> Introduction to Python Packages</a></span></li>\n",
+    "<li><span><a href=\"#introduction-to-numpy\" data-toc-modified-id=\"2.-Introduction-to-NumPy-2\"> Introduction to NumPy</a></span></li>\n",
+    "<li><span><a href=\"#numpy-arrays\" data-toc-modified-id=\"3.-NumPy-Arrays-23\"> NumPy Arrays</a></span></li>\n",
+    "<li><span><a href=\"#array-operations-and-broadcasting\" data-toc-modified-id=\"4.-Array-Operations-and-Broadcasting-4\"> Array Operations and Broadcasting</a></span></li>\n",
+    "<li><span><a href=\"#indexing-and-slicing\" data-toc-modified-id=\"5.-Indexing-and-slicing-5\"> Indexing and slicing</a></span></li>\n",
+    "<li><span><a href=\"#more-useful-mumpy-functions\" data-toc-modified-id=\"6.-More-Useful-NumPy-Functions-6\"> More Useful NumPy Functions</a></span></li>\n",
+    "<li><span><a href=\"#introduction-to-pandas\" data-toc-modified-id=\"7.-Introduction-to-Pandas-7\"> Introduction to Pandas</a></span></li>\n",
+    "<li><span><a href=\"#pandas-series\" data-toc-modified-id=\"8.-Pandas-Series-8\"> Pandas Series</a></span></li>\n",
+    "<li><span><a href=\"#pandas-dataframes\" data-toc-modified-id=\"9.-Pandas-DataFrames-9\"> Pandas DataFrames</a></span></li>\n",
+    "<li><span><a href=\"#why-ndarrays-and-series-and-dataFrames?\" data-toc-modified-id=\"10.-Why-ndarrays-and-Series-and-DataFrames?-10\"> Why ndarrays and Series and DataFrames?</a></span></li></ul></div>"
    ]
   },
   {
