--- a/_sources/week2/tutorial2.ipynb
+++ b/_sources/week2/tutorial2.ipynb
@@ -22,14 +22,14 @@
     "<h2>Tutorial Outline<span class=\"tocSkip\"></span></h2>\n",
     "<hr>\n",
     "<div class=\"toc\"><ul class=\"toc-item\">\n",
-    "<li><span><a href=\"#1.-Introducing the packages\" data-toc-modified-id=\"1.-Introducing-the-packages-2\">1. Introducing the packages</a></span></li>\n",
-    "<li><span><a href=\"#2.-\" data-toc-modified-id=\"2.-Dealing-with-missing-values-3\">2. Importing the data</a></span></li>\n",
-    "<li><span><a href=\"#3.-\" data-toc-modified-id=\"2.-Dealing-with-missing-values-3\">4. Dealing with missing values</a></span></li>\n",
-    "<li><span><a href=\"#4.-\" data-toc-modified-id=\"3.-Training-the-random-forest-model-4\">5. Training the random forest model </a></span></li>\n",
-    "<li><span><a href=\"#5.-\" data-toc-modified-id=\"4.-Prediction-with-the-random-forest-model-5\">6. Prediction with the random forest model</a></span></li>\n",
-    "<li><span><a href=\"#6.-\" data-toc-modified-id=\"5.-Evaluate-performance-6\">7. Evaluate performance</a></span></li>\n",
-    "<li><span><a href=\"#7.-\" data-toc-modified-id=\"4.-Parameter-tuning-5\">8. Parameter tuning</a></span></li>\n",
-    "<li><span><a href=\"#8.-\" data-toc-modified-id=\"5.-Feature-importance-6\">9. Feature importance</a></span></li></ul></div>"
+    "<li><span><a href=\"#introducing-the-packages\" data-toc-modified-id=\"1.-Introducing-the-packages-2\">1. Introducing the packages</a></span></li>\n",
+    "<li><span><a href=\"#importing-the-data\" data-toc-modified-id=\"2.-Dealing-with-missing-values-3\">2. Importing the data</a></span></li>\n",
+    "<li><span><a href=\"#dealing-with-missing-values\" data-toc-modified-id=\"2.-Dealing-with-missing-values-3\">4. Dealing with missing values</a></span></li>\n",
+    "<li><span><a href=\"#training-the-random-forest-model\" data-toc-modified-id=\"3.-Training-the-random-forest-model-4\">5. Training the random forest model </a></span></li>\n",
+    "<li><span><a href=\"#prediction-with-the-random-forest-model\" data-toc-modified-id=\"4.-Prediction-with-the-random-forest-model-5\">6. Prediction with the random forest model</a></span></li>\n",
+    "<li><span><a href=\"#evaluate-performance\" data-toc-modified-id=\"5.-Evaluate-performance-6\">7. Evaluate performance</a></span></li>\n",
+    "<li><span><a href=\"#parameter-tuning\" data-toc-modified-id=\"4.-Parameter-tuning-5\">8. Parameter tuning</a></span></li>\n",
+    "<li><span><a href=\"#feature-importance\" data-toc-modified-id=\"5.-Feature-importance-6\">9. Feature importance</a></span></li></ul></div>"
    ]
   },
   {
