deploy: f10e17885c00159612fcb13e719e6ed3ef00767b

--- a/_sources/week3/lecture.ipynb
+++ b/_sources/week3/lecture.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fbfd36be",
+   "id": "72b6b890",
    "metadata": {},
    "source": [
-    "# Lecture: Introduction to Artificial Neural Networks\n",
+    "# Lecture: Introduction to Artificial Neural Networks and model validation\n",
     "\n",
     "This week we will focus on the basic concepts of machine learning and how we can develop a simply machine learning model.\n",
     "\n",
