fix some errors

--- a/week4/tutorial2.ipynb
+++ b/week4/tutorial2.ipynb
@@ -226,6 +226,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "1YWXcMRV-g4A"
@@ -246,7 +247,7 @@
     "\n",
     "Now, the next step is to access the API. You can now login on the website of the [Copernicus Climate Data Store](https://cds.climate.copernicus.eu/). After you login, you can click on your name in the top right corner of the webpage (next to the login button). On the personal page that has just opened, you will find your user ID (**uid**) and your personal **API**. You need to add those in the cell below to be able to download the windstorm.\n",
     "\n",
-    "As you can see in the cell below, we download a specific windstorm that has occured on the seventh of February in 2020. This is storm [Ciara](https://en.wikipedia.org/wiki/Storm_Ciara). "
+    "As you can see in the cell below, we download a specific windstorm that has occured on the 28th of October in 2013. This is storm [Carmen (also called St Jude)](https://en.wikipedia.org/wiki/St._Jude_storm). "
    ]
   },
   {
@@ -408,17 +409,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 270
-    },
-    "id": "90SX9QOB-g4C",
-    "outputId": "1e159968-32e6-4375-9d36-559864415b85"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "windstorm_europe"
+    "windstorm_europe['FX'].plot()"
    ]
   },
   {
@@ -1828,7 +1822,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1842,7 +1836,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f323064ae63d54ed8d769390a968e914fbf7abacffc63e116cd2e04a08ed2d24"
+   }
   }
  },
  "nbformat": 4,
