--- a/_sources/week4/tutorial1.ipynb
+++ b/_sources/week4/tutorial1.ipynb
@@ -1738,6 +1738,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "gm8NIAR947DW"
@@ -1745,7 +1746,17 @@
    "source": [
     "One of the exiting things we can do with this data is that we can compute and plot routes between two points on a map.\n",
     "\n",
-    "Let's first select two random start and end points from the graph and compute the shortest route between them through using the `shortest_path()` function of the `NetworkX` package."
+    "Let's first select two random start and end points from the graph and compute the shortest route between them through using the `shortest_path()` function of the `NetworkX` package.\n",
+    "\n",
+    "The function  `ox.nearest_nodes()` looks for the nearest point in your network based on a `X` and `Y` coordinate. For example, in the code below, the origin node is based on the northwestern corner of your bounding box, whereas the destination node is based on the coordinates of the southeastern corner of your bounding box.   \n",
+    "\n",
+    "So this can also be rewritten as:\n",
+    "\n",
+    "```\n",
+    "origin_node = ox.nearest_nodes(G,4.65465, 56.6778) \n",
+    "destination_node = ox.nearest_nodes(G,4.61055, 59.5487) \n",
+    "route = nx.shortest_path(G, origin_node, destination_node) \n",
+    "```"
    ]
   },
   {
@@ -1855,11 +1866,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 11:</b>  Please add two more routes on a map and upload the resulting figure here.\n",
+    "<b>Question 11:</b>  Please add one more routes on a map and upload the resulting figure here.\n",
     "</div>"
    ]
   },
