--- a/_sources/week4/tutorial2.ipynb
+++ b/_sources/week4/tutorial2.ipynb
@@ -636,7 +636,7 @@
     "* carefully read the documentation of the `.clip_box()` function of rioxarray. Which information do you need? \n",
     "* is the GeoDataFrame of your region (the area GeoDataframe) in the same coordinate system? Perhaps you need to convert it using the `.to_crs()` function. \n",
     "* how do you get the bounds from your area GeoDataFrame? \n",
-    "* The final step of the clip would be to use the `.rio.clip()` function, using the actual area file and the flood map clipped to the bounding box. Please not that you should **not** use the envelope here, like we did in the previous clip. Here we really want to use the exact geometry values.\n",
+    "* The final step of the clip would be to use the `.rio.clip()` function, using the actual area file and the flood map clipped to the bounding box. Please note that you should **not** use the envelope here, like we did in the previous clip. Here we really want to use the exact geometry values.\n",
     "\n",
     "As you will see, we first clip it very efficiently using the bounding box. After that, we do an exact clip."
    ]
