--- a/_sources/week5/tutorial1.ipynb
+++ b/_sources/week5/tutorial1.ipynb
@@ -789,11 +789,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 3:</b> Describe in your own words why we want to split our data into training data and test data. Why is this important for the evaluation of our results?\n",
+    "<b>Question 3:</b> Describe in your own words why we want to split our data into training data and test data. Why is this important for the evaluation of our results? And what is the downside of this relative simple 80/20 split? Please refer back to some of the validation methods we have discussed in week 3.\n",
     "</div>"
    ]
   },
@@ -1417,8 +1418,8 @@
    },
    "outputs": [],
    "source": [
-    "trainingSample_SVM = sample.filter('random <= 0.2');\n",
-    "validationSample_SVM = sample.filter('random > 0.8');"
+    "trainingSample_SVM = sample.filter('random <= 0.2')\n",
+    "validationSample_SVM = sample.filter('random > 0.8')"
    ]
   },
   {
@@ -1927,18 +1928,19 @@
    },
    "outputs": [],
    "source": [
-    "sample = sample.randomColumn();\n",
-    "trainingSample = sample.filter('random <= 0.8');\n",
-    "validationSample = sample.filter('random > 0.8');"
+    "sample = sample.randomColumn()\n",
+    "trainingSample = sample.filter('random <= 0.8')\n",
+    "validationSample = sample.filter('random > 0.8')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "nWPpXPtr0B_t"
    },
    "source": [
-    "As the **CART** classifier performed best, we will re-use this one to train the algorithm through using the ESA WorldCover data."
+    "As the **CART** classifier performed reasonably well for CLC, we will re-use this one to train the algorithm through using the ESA WorldCover data."
    ]
   },
   {
@@ -1964,7 +1966,7 @@
     "  'features': trainingSample,\n",
     "  'classProperty': label,\n",
     "  'inputProperties': image.bandNames()\n",
-    "});"
+    "})"
    ]
   },
   {
@@ -2102,7 +2104,7 @@
     "};\n",
     "\n",
     "#Map.addLayer(lc, classVis, 'lc');\n",
-    "Map.addLayer(ESAWorldCover_classified, classVis, 'Classified');\n",
+    "Map.addLayer(ESAWorldCover_classified, classVis, 'Classified')\n",
     "Map"
    ]
   },
@@ -2375,7 +2377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.10"
   },
   "vscode": {
    "interpreter": {
